--- a/erp-system-v2/package.json
+++ b/erp-system-v2/package.json
@@ -8,6 +8,8 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
     "@mui/x-data-grid": "^5.17.22",
+    "@nivo/line": "^0.80.0",
+    "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,9 +17,11 @@
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.3.2",
+    "redux": "^4.2.1",
     "sass": "^1.57.1",
     "web-vitals": "^2.1.4"
   },
